added https and error handling

--- a/server-3/index.html
+++ b/server-3/index.html
@@ -7,12 +7,10 @@
         <title>Document</title>
     </head>
     <body>
-      <h1>Hello</h1>
+        <h1>Hello</h1>
     </body>
     <script>
-        let ws;
-        const proto = window.location.protocol === "https" ? "wss" : "ws";
-        ws = new WebSocket(`${proto}://${window.location.host}`);
+        const ws = new WebSocket(`wss://${window.location.host}`);
         ws.onmessage = (e) => console.log(e.data);
     </script>
 </html>
